dio-flex-box-item

--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
             </header> <!--header-->
 
 
-            <section class="menu">
-              
-                <ul class="lista">
-                    <li><a href="https://www.dvlcell.com.br/DVLComputadores/main.html">Dvl Computadores & Notebooks</a></li>
-                    <li><a href="https://www.dvlcell.com.br/index.html">Dvl Celulares & Tablets</a></li>
-                </ul> <!--lista-->
-
+            <section class="menu">              
+                <ul class="opcoes">
+                    <li class="opcoes"><a class="link" href="https://www.dvlcell.com.br/DVLComputadores/main.html">Dvl Computadores & Notebooks</a></li>
+                    <li class="opcoes"><a class="link" href="https://www.dvlcell.com.br/index.html">Dvl Celulares & Tablets</a></li>
+                </ul> <!--opcoes-->
             </section> <!--menu-->
 
             <section class="descricao">
