--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
             </section> <!--menu-->
 
             <section class="descricao">
+                <img class="servicos" src="img/servicos2.jpg" width="30%">
 
-                <img src="img/servicos2.jpg" width="30%">
-
-                <div class="text">
+                <div class="texto">
                     <h1>Gráfica Online</h1>
                     <p><b>
                             Banner, Panfletos, Cartão de Visitas, Arte Gráfica,
@@ -41,11 +40,9 @@
                             Adesivos, Calendários, Encartes, Folhetos,
                             <br>
                             Impressão digital, Tag e muito mais!
-                            <br>
-                            
+                            <br>                            
                     </b></p>
-                </div> <!--text-->
-               
+                </div> <!--text-->               
             </section> <!--descricao-->
 
             <section class="info">
