--- a/index.html
+++ b/index.html
@@ -58,13 +58,9 @@
                 </div> <!--panfletos-->
             </section> <!--info-->
             
-            <section class="orcamentos">
-
-                <div class="orcamentos">
+            <section class="orcamento">
                     <img src="img/gratis.png" width="320px">
-                </div>                                 
-
-            </section> <!--orcamentos-->
+            </section> <!--orcamento-->
 
             <div class="fale">
                 <h2>Clique aqui e Fale Conosco:</h2>
