Smart e Tab Style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <meta name="keywords" content="Gráfica">
 
         <link rel="stylesheet" href="mainStyle.css">
+        <link rel="stylesheet" href="mainSmartStyle.css">
+        <link rel="stylesheet" href="mainTabStyle.css">
         <link rel="icon" href="img/dd.jpg">
 
         <title>Dely Design</title>
@@ -62,6 +64,10 @@
                 <a href="https://wa.me/5521982890749"><img src="img/orcamento.png"></a>
             </section> <!--orcamento-->
 
+            <div class="faleConoscoH2">
+                <h2>Clique aqui e Fale Conosco:</h2>
+            </div>
+            
             <section class="social">
                 <div class="telefone">
                     <a href="tel:21982890749"><img src="img/phone.gif"></a>
@@ -69,7 +75,6 @@
                 
                 <div class="faleConosco">
                     <img src="img/setas.png">
-                    <!-- <h2>Clique aqui <br> e <br> Fale Conosco:</h2> -->
                 </div> <!--faleConosco-->
 
                 <div class="whatsapp">
